chore: LeftJoin implemented